<resources>
    <string name="app_name">bsDIY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="avatar">Avatar</string>
    <string name="challenge">Challenge</string>
    <string name="challenges">Challenges</string>
    <string name="explore">Explore</string>
    <string name="messages">Messages</string>
    <string name="projects">Projects</string>
    <string name="skills">Skills</string>
    <string name="skill_patch">Skill patch</string>
    <string name="stream">Stream</string>
    <string name="to_dos">To-Do&#8217;s</string>

    <string name="post_a_project">Post A Project</string>

    <!-- Empty states -->
    <string name="no_explore">Nothing to explore yet!</string>
    <string name="no_messages">No messages yet!</string>
    <string name="no_stream">No stream yet!</string>
    <string name="no_to_dos">No to-do&#8217;s yet!</string>

    <!-- Placeholders -->
    <string name="user_name_placeholder">Brain Behold</string>
</resources>
