<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_notification"
            android:title="@string/messages"/>
        <item
            android:id="@+id/nav_to_dos"
            android:icon="@drawable/ic_to_do"
            android:title="@string/to_dos"/>
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_skills"
            android:title="@string/skills"/>
        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_stream"
            android:title="@string/stream"/>
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore"/>
    </group>
</menu>
