<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_skill"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".app.skill.SkillActivity">

        <ImageView
            android:id="@+id/patch_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_challenge"
            android:backgroundTint="@color/diy_medium_gray"
            android:contentDescription="@string/skill_patch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_explore"/>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patch_image_view"
            tools:text="@string/challenge"/>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            tools:text="Description"/>

        <TextView
            android:id="@+id/projects_header_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/diy_light_gray"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/projects"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view"/>

        <LinearLayout
            android:id="@+id/projects_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projects_header_text_view"
            tools:background="@color/diy_turquoise"
            tools:layout_height="400dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>